testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport3.errors.txt
usage.js(1,19): error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport3.js'. 'lateBoundAssignmentDeclarationSupport3.js' implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport3.js");
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport3.js'. 'lateBoundAssignmentDeclarationSupport3.js' implicitly has an 'any' type.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport3.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    Object.defineProperty(module.exports, _sym, { value: "ok" });
    Object.defineProperty(module.exports, _str, { value: "ok" });
    module.exports.S = _sym;